src/css/page.css
#pages {
	.page {
		display: none;
		margin-inline: max(10px, calc(30vw - 150px));
		padding-bottom: 20rem;

		&.selected {
			display: block;
		}

		h1 {
			font-size: 72px;
			font-family: Alegreya;
			margin: 0px;
			padding-block: 120px;
		}
		h2 {
			font-size: 24px;
			font-family: Alegreya;
			padding-block: 32px;
			font-weight: bold;
		}
		li {
			margin-block: 4px;
			
			&:before {
				content: "• "
			}
		}

		&#about {
			#aboutme {
				flex: 2.5;
			}

			#workedwith {
				flex: 1.5;
	
				a {
					display: block;
					font-size: 18px;
					margin-block: 8px;
					text-decoration: underline;
				}
			}
		}

		&#contact {
			input, textarea, button {
				background-color: transparent;
				display: block;
				padding: 8px;
				border-radius: 12px;
				border: 1px solid theme(colors.coffee);
				width: 80%;
				max-width: 400px;
				margin: 30px auto;
			}
			button {
				max-width: 250px;

				&:hover {
					background-color: theme(colors.papyrus);
				}
			}
			#contactsides {
				display: flex;
				justify-content: space-between;

				#textside {
					max-width: min(30vw, 400px);
					h1 {
						padding-block: 40px;
					}
				}
				#contactside {
					width: 400px;
				}
			}
		}

		&#portfolio {
			#filters {
				.filter {
					border-radius: 16px;
					border: 1px solid theme(colors.coffee);
					padding: 4px 8px;
					margin: 2px 3px;
					box-shadow: inset -1px -1px 3px theme(colors.papyrus);
					transition: all 0.2s ease-out;
					
					&.selected {
						opacity: 0.3;
						padding: 4px 12px;
						margin-inline: 1px;
					}
				}
			}

			#works {
				.work {
					flex: 0 0 30%;
					border-radius: 16px;
					margin: min(1vw, 12px);
					padding: 8px;
					border: 1px solid theme(colors.coffee);
					min-width: 200px;
					cursor: pointer;
					display: flex;
					flex-direction: column;
					justify-content: space-between;

					.img-container {
						width: 100%;
						aspect-ratio: 16/9;

						img {
							width: 100%;
							height: 100%;
							object-fit: cover;
							border-radius: 8px;
							pointer-events: none;
						}
					}

					.work-text {
						flex-grow: 1;
						display: flex;
						flex-direction: column;
						justify-content: space-between;

						h2 {
							padding: 0;
						}
						p {
							margin-top: 6px;
							font-style: italic;
						}
					}
				}
			}
		}
	}
}

@media screen and (max-width: 720px) {
	#pages {
		.page {
			h1 {
				font-size: 62px;
			}
			&#portfolio #works .work {
				flex: 0 0 40%;
				min-width: 160px;
			}
			&#contact {
				#contactsides {
					flex-direction: column;
					text-align: center;

					#contactside, #textside {
						width: 100%;
						max-width: 100%;

						p {
							text-align: left;
						}
					}
				}
			}
		}
	}
}
@media screen and (max-width: 480px) {
	#pages {
		.page {
			h1 {
				font-size: 48px;
			}
			h2 {
				font-size: 20px;
			}
		}
	}
}

